# ENPM700-FinalProject-HiveRobots

./: .gitignore  CMakeLists.txt  GEMINI_UPDATE_DEC2024.md  LICENSE  PROJECT_CHECKLIST.md  README.md  frames_2025-12-08_20.07.28.gv  package.xml  quick_check.sh  test_slam.sh  verify_map_quality.sh
.github/workflows/: run-unit-test-and-upload-codecov.yml
config/: cartographer_2d.lua  hive_debug.rviz  map_merge_params.yaml  slam_params.yaml  turtlebot_webots_no_imu.urdf
include/hive_control/: hive_controller.hpp  hive_controller_node.hpp  hive_state.hpp
launch/: hive_slam.launch.py  hive_slam_cartographer.launch.py  hive_slam_final.launch.py  spawn_3_robots.launch.py  spawn_robots.launch.py  visualize.launch.py
scripts/: generate_rviz_config.py  generate_world.py  source_all_workspaces.sh  world_frame_publisher.py
src/: hive_controller.cpp  hive_controller_node.cpp  hive_state.cpp  main.cpp  scan_frame_remapper.cpp
test/: test_hive_control.cpp  test_hive_controller.cpp  test_hive_state_machine.cpp
worlds/: hive_multi_robot_arena.wbt  turtlebot3_burger.wbt  warehouse.wbt
